# 3d_printing_source

Ex3/: CMakeCache.txt  CMakeLists.txt  Makefile  Mesh_Deimator_Comparison.docx  Mesh_Deimator_Comparison.odt  cmake_install.cmake  ex_3_1.docx  hausdorf_distance.cpp
ex2/: CMakeLists.txt  FlexLexer-2.5.35.h  FlexLexer-2.5.4.h  Polyhedron_viewer.cpp  Polyhedron_viewer.hpp  Prepare_VRML_print.cpp  Wrl_lexer.hpp  compute_approx_width_3d.cpp  compute_approx_width_3d.docx  compute_width_3d.cpp  compute_width_3d.docx  compute_width_3d_2_1_c.cpp  cube_points_after_rotation.xlsx  football.wrl  is_valid.hpp  parse.cpp  parse.hpp  parse.y  scan.cpp  scan.l  unistd.h
make_for_linux/: Build_surface.hpp  CMakeCache.txt  CMakeLists.txt  Polyhedron_viewer.cpp  Polyhedron_viewer.hpp  Prepare_VRML_print.cpp  Processed_football.wrl  Sphere_bound.hpp  Wrl_lexer.hpp  compute_approx_width_3d.cpp  compute_planes.hpp  compute_width_3d.cpp  compute_width_3d_2_1_c.cpp  is_simple.hpp  parse.cpp  parse.hpp  scan.cpp  scan.l  viewer.cpp
